# fractional

./: CMakeLists.txt  README.md
.github/workflows/: tests.yml
lib/: CMakeLists.txt
lib/fractional/: CMakeLists.txt
lib/fractional/include/: Expression.h  Fraction.h
lib/fractional/src/: Expression.cpp  Fraction.cpp
lib/fractional/tests/: test.cpp
